# wow

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: design.md  security.md
examples/: README.md  wow.kdl  wow.toml
examples/cowsay/: Cargo.toml
examples/cowsay/src/: bindings.rs  main.rs
examples/kitty/: Cargo.toml
examples/kitty/src/: bindings.rs  main.rs
src/: .config.rs.swp  .registry.rs.swp  .shims.rs.swp  .workspace.rs.swp  config.rs  main.rs  registry.rs  run.rs  shims.rs  workspace.rs
