[package]
name = "wow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
cap-std = "3.0.0"
clap = { version = "4.5.4", features = ["derive"] }
knuffel = "3.2.0"
tokio = "1.37.0"
warg-client = "0.5.0"
warg-credentials = "0.5.0"
warg-protocol = "0.5.0"
wasmtime = "19.0.2"
wasmtime-wasi = "19.0.2"

[workspace]
members = ["examples/cowsay", "examples/kitty"]
