[package]
name = "kitty"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "wow:kitty"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
